does not really work but..
Contains ideas you want.

--- a/public/luke.html
+++ b/public/luke.html
@@ -19,9 +19,9 @@
             <div id="alerts"></div>
 
             <p>
-                <a id="record" class="btn btn-success"><span style="color: red;">◉</span> Start Recording<span id="countdown"></span></a>
-                <a id="stop" class="btn btn-danger">Stop</a>
-                <a id="process" class="btn btn-info">Process!</a>
+                <a id="record" class="btn btn-success"><span style="color: red;">◉</span> New Recording<span id="countdown"></span></a>
+                <a id="process" class="btn btn-info hidden">Save</a>
+                <a id="discard" class="btn btn-info hidden">Discard</a>
             </p>
 
             <div class="row">
