--- a/public/luke.html
+++ b/public/luke.html
@@ -35,7 +35,10 @@
             </div>
         </div>
 
-        <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script
+            src="https://code.jquery.com/jquery-3.2.1.min.js"
+            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+            crossorigin="anonymous"></script>
         <script src="/javascripts/main-2.js"></script>
     </body>
 </html>
