--- a/public/luke.html
+++ b/public/luke.html
@@ -19,7 +19,7 @@
             <div id="alerts"></div>
 
             <p>
-                <a id="record" class="btn btn-success"><span style="color: red;">◉</span> New Recording<span id="countdown"></span></a>
+                <a id="record" class="btn btn-success"><span style="color: red;">◉</span> Start Recording<span id="countdown"></span></a>
                 <a id="process" class="btn btn-info hidden">Save</a>
                 <a id="discard" class="btn btn-info hidden">Discard</a>
             </p>
